@@ -1,17 +1,60 @@
 ##parameters=field_type=None
 
-mapping = { 'CPS String List Field': ('MultiSelect Widget', 'Lines Widget', 
-                'Ordered List Widget', 'Unordered List Widget'),
-            'CPS String Field': ('String Widget', 'TextArea Widget', 
-                'Email Widget', 'Heading Widget', 'Rich Text Editor Widget',
-                'InternalLinks Widget', 'Link Widget', 'Html Widget'),
-            'CPS DateTime Field': ('DateTime Widget', 'Date Widget'),
-            'CPS Password Field': ('Password Widget',),
-            'CPS Int Field': ('Int Widget', 'CheckBox Widget'),
-            'CPS Long Field': ('Long Widget',),
-            'CPS Float Field': ('Float Widget',),
-            'CPS File Field': ('AttachedFile Widget', ' File Widget'),
-            'CPS Image Field': ('Image Widget', 'Photo Widget'),
+mapping = { 'CPS String List Field': ({'id': 'MultiSelect Widget', 
+                                       'title': 'CPS MultiSelect Widget'},
+                                      {'id': 'Lines Widget', 
+                                       'title': 'CPS Lines Widget'},
+                                      {'id': 'Ordered List Widget',
+                                       'title': 'CPS Ordered List Widget'},
+                                      {'id': 'Unordered List Widget',
+                                       'title': 'CPS Unordered List Widget'},
+                                     ),
+            'CPS String Field':      ({'id': 'String Widget',  
+                                       'title': 'CPS String Widget'},
+                                      {'id': 'TextArea Widget',  
+                                       'title': 'CPS TextArea Widget'},
+                                      {'id': 'Email Widget',  
+                                       'title': 'CPS Email Widget'},
+                                      {'id': 'Heading Widget',  
+                                       'title': 'CPS Heading Widget'},
+                                      {'id': 'Rich Text Editor Widget',  
+                                       'title': 'CPS Rich Text Editor Widget'},
+                                      {'id': 'InternalLinks Widget',  
+                                       'title': 'CPS InternalLinks Widget',},
+                                      {'id': 'Link Widget',  
+                                       'title': 'CPS Link Widget'},
+                                      {'id': 'Html Widget',  
+                                       'title': 'CPS Html Widget'},
+                                     ),
+            'CPS DateTime Field':    ({'id': 'DateTime Widget',  
+                                       'title': 'CPS DateTime Widget'},
+                                      {'id': 'Date Widget',  
+                                       'title': 'CPS Date Widget'},
+                                     ),
+            'CPS Password Field':    ({'id': 'Password Widget',  
+                                       'title': 'CPS Password Widget'},
+                                     ),
+            'CPS Int Field':         ({'id': 'Int Widget',  
+                                       'title': 'CPS Int Widget'},
+                                      {'id':'CheckBox Widget',  
+                                       'title': 'CPS CheckBox Widget'}
+                                     ),
+            'CPS Long Field':        ({'id': 'Long Widget',  
+                                       'title': 'CPS Long Widget'},
+                                     ),
+            'CPS Float Field':       ({'id': 'Float Widget',  
+                                       'title': 'CPS Float Widget'},
+                                     ),
+            'CPS File Field':        ({'id': 'AttachedFile Widget',  
+                                       'title': 'CPS AttachedFile Widget'},
+                                      {'id': 'File Widget',  
+                                       'title': 'CPS File Widget'},
+                                     ),
+            'CPS Image Field':       ({'id': 'Image Widget',  
+                                       'title': 'CPS Image Widget'},
+                                      {'id': 'Photo Widget',  
+                                       'title': 'CPS Photo Widget'},
+                                     ),
           }
 
 if field_type:
